Fixed spelling mistakes and improved wording
Changed wording and placeholder text on multiple sites according to feedbacks; replaced "customization" with "personalization"

--- a/BTH745_Website/cart.html
+++ b/BTH745_Website/cart.html
@@ -82,7 +82,7 @@
         <tr>
           <td>Flight</td>
           <td>1 Adult, Economy, Toronto Pearson Airport to Vancouver International Airport and return, June 20, 2020 - July 20, 2020</td>
-          <td><a class="btn btn-primary" href="customization.html">Edit</a></td>
+          <td><a class="btn btn-primary" href="personalization.html">Edit</a></td>
           <td><a class="btn btn-warning">Delete</a></td>
         </tr>
         <tr>
