--- a/BTH745_Website/contactus.html
+++ b/BTH745_Website/contactus.html
@@ -60,7 +60,7 @@
     <div class="container py-5">
       <div class="row" style="">
         <div class="col-md-8 mx-auto" style="color:white; text-align:left"> <i class="fa fa-globe fa-lg fa-5x "></i>
-          <h1 class="display-3 mb-5 "><b>We are here to help!</b></h1>
+          <h1 class="display-3 mb-5 "><b>Contact Us!</b></h1>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 p-3">
-          <h1 class="mb-0">Call us.&nbsp; Now</h1>
+          <h1 class="mb-0">We are here to help.</h1>
         </div>
       </div>
     </div>
@@ -108,9 +108,7 @@
         <div class="col-lg-3 col-6 p-3">
           <h5> <b>Others</b> </h5>
           <ul class="list-unstyled">
-            <li> <a href="#">FAQ</a> </li>
-            <li> <a href="#">Resources</a> </li>
-            <li> <a href="#">Career</a> </li>
+            <li> <a href="faq.html">FAQ</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 p-3">
