--- a/BTH745_Website/personalization.html
+++ b/BTH745_Website/personalization.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
-  <link rel="stylesheet" href="./assets/css/customization.css">
+  <link rel="stylesheet" href="./assets/css/personalization.css">
   <link rel="stylesheet" href="./assets/css/now-ui-kit.css" type="text/css">
   <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
 </head>
@@ -61,8 +61,8 @@
     <div class="container">
       <div class="row">
         <div class="mx-auto col-md-6">
-          <h1>Customization</h1>
-          <p class="mb-4">Make this trip personalized!</p>
+          <h1>Personalization</h1>
+          <p class="mb-4">Make this trip your very own!</p>
         </div>
       </div>
     </div>
@@ -78,9 +78,9 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="flightType"> Flight Type: </label>
-          <select class="form-control form-control-lg" name="flightType">
-            <option value="two_way" selected=""> 2-way </option>
+          <label for="airlineCarrier"> Airline carrier: </label>
+          <select class="form-control form-control-lg" name="airlineCarrier">
+            <option value="two_way" selected=""> round-trip </option>
             <option value="one_way"> 1-way </option>
             <option value="multi_city"> multi-city </option>
           </select>
@@ -92,11 +92,11 @@
           </div>
           <div class="col">
             <input class="form-control form-control-lg" type="number" min="0" value="0" size="5">
-            <label>Children</label>
+            <label>Children (under 16 y.o.)</label>
           </div>
           <div class="col">
             <input class="form-control form-control-lg" type="number" min="0" value="0" size="5">
-            <label>Senior(s)</label></div>
+            <label>Senior(s) (over 65 y.o.)</label></div>
         </div>
         <div class="form-group">
           <label for="departure"> Departure: </label>
