--- a/BTH745_Website/discover.html
+++ b/BTH745_Website/discover.html
@@ -76,7 +76,7 @@
           <div class="col-md-6">
           </div>
           <div class="col-md-6" style="text-align:right">
-            <h1 class="mb-3">America</h1>
+            <h1 class="mb-3">Americas</h1>
             <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.&nbsp; <br> <br><br></p>
           </div>
         </div>
