--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -191,7 +191,7 @@
             <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
-                <h3> Air Canada - 2 Ways</h3>
+                <h3> Air Canada - round-trip</h3>
               </div>
               <div>
                 <label>From: Toronto</label>
@@ -213,14 +213,14 @@
               <div>
                 <h3> Price: $650 </h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customization</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
             </div>
           </div>
           <div class="row flightDiv">
             <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/westjet.png" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
-                <h3> Westjet - 2 Ways</h3>
+                <h3> Westjet - round-trip</h3>
               </div>
               <div>
                 <label>From: Toronto</label>
@@ -242,7 +242,7 @@
               <div>
                 <h3> Price: $635</h3>
               </div>
-              <div class="addCart"><a class="btn btn-primary" href="customization.html">Customize!</a> </div>
+              <div class="addCart"><a class="btn btn-primary" href="ersonalization.html">Personalization</a> </div>
             </div>
           </div>
         </div>
