fixed alignment in flight and hotel

--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -72,10 +72,10 @@
         <div class="mx-auto col-md-12">
           <form class="form-inline d-flex justify-content-center">
             <div class="input-group">
-              <label>From</label><input type="text" class="form-control" placeholder="Location" id="form1">
-              <label>To</label><input type="text" class="form-control" placeholder="Location" id="form1">
-              <label>Depature Date</label><input type="date" class="form-control" placeholder="Location" id="form1">
-              <label>Return Date</label><input type="date" class="form-control" placeholder="Location" id="form1">
+              <label style="margin-left: 5px;">From</label><input style="padding-top: 12px;"  type="text" class="form-control" placeholder="Location" id="form1">
+              <label>To</label><input style="padding-top: 12px;"  type="text" class="form-control" placeholder="Location" id="form1">
+              <label>Depature Date</label><input style="padding-top: 12px;"  type="date" class="form-control" placeholder="Location" id="form1">
+              <label>Return Date</label><input style="padding-top: 12px;"  type="date" class="form-control" placeholder="Location" id="form1">
               <div class="input-group-append"> <button class="btn btn-primary" type="button">Search Flight</button> </div>
             </div>
           </form>
