--- a/BTH745_Website/hotel.html
+++ b/BTH745_Website/hotel.html
@@ -72,7 +72,8 @@
         <div class="mx-auto col-md-12">
           <form class="form-inline d-flex justify-content-center">
             <div class="input-group">
-              <label>Location</label><input type="text" class="form-control" placeholder="Location" id="form1">
+              <label style="margin-left: 5px;">Location</label>
+              <input style="padding-top: 12px;" type="text" class="form-control" placeholder="Location" id="form1">
               <div class="input-group-append"> <button class="btn btn-primary" type="button">Search Hotel</button> </div>
             </div>
           </form>
