--- a/BTH745_Website/aboutus.html
+++ b/BTH745_Website/aboutus.html
@@ -142,7 +142,7 @@
       </div>
     </div>
   </div>
-  <div class="py-5 text-uppercase" >
+  <div class="py-5 text-uppercase">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -177,56 +177,19 @@
       </div>
     </div>
   </div>
-  <div class="py-5 bg-dark" style="background-image: url(&quot;assets/img/bg11.jpg&quot;); background-size: cover; background-position: center top;">
-    <div class="container">
-      <div class="row my-4">
-        <div class="mx-auto col-md-6 col-10 col-xl-4 px-4">
-          <div class="card bg-primary">
-            <div class="card-body text-center">
-              <div class="row mt-5">
-                <div class="col-md-12">
-                  <h5 class="mb-4">
-                    <b>SIGN UP</b>
-                  </h5>
-                  <button class="btn btn-icon rounded btn-light mx-1 btn-facebook shadow" type="button">
-                    <i class="fa fa-fw fa-lg fa-facebook-square"></i>
-                  </button>
-                  <button class="btn btn-icon rounded btn-lg btn-light mx-1 btn-twitter shadow" type="button">
-                    <i class="fa fa-fw fa-2x fa-twitter"></i>
-                  </button>
-                  <button class="btn btn-icon rounded btn-light mx-1 btn-google shadow" type="button">
-                    <i class="fa fa-fw fa-google-plus fa-lg"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col">
-          <a class="btn rounded btn-lg btn-outline-secondary" href="#">View Login Page</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3" style="">
+  <div class="py-3">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
           <h5> <b>Main</b> </h5>
           <ul class="list-unstyled">
-            <li> <a href="#">Home</a> </li>
-            <li> <a href="#">Features</a> </li>
-            <li> <a href="#">Pricing</a> </li>
+            <li> <a href="main.html">Home</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-6 p-3">
           <h5> <b>Others</b> </h5>
           <ul class="list-unstyled">
-            <li> <a href="#">FAQ</a> </li>
-            <li> <a href="#">Resources</a> </li>
-            <li> <a href="#">Career</a> </li>
+            <li> <a href="faq.html">FAQ</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-md-6 p-3">
