--- a/BTH745_Website/main.html
+++ b/BTH745_Website/main.html
@@ -103,7 +103,7 @@
         <div class="col-lg-3 col-6 p-3">
           <h5> <b>Main</b> </h5>
           <ul class="list-unstyled">
-            <li> <a href="#">Home</a> </li>
+            <li> <a href="main.html">Home</a> </li>
           </ul>
         </div>
         <div class="col-lg-3 col-6 p-3">
