--- a/BTH745_Website/profile.html
+++ b/BTH745_Website/profile.html
@@ -46,7 +46,7 @@
               <i class="fa fa-address-book fa-fw fa-2x  mr-2"></i>&nbsp;ABOUT US</a>
           </li>
           <li class="nav-item mx-1">
-            <a class="nav-link align-items-center d-flex" href="aboutus.html">
+            <a class="nav-link align-items-center d-flex" href="cart.html">
               <i class="fa fa-shopping-cart fa-fw fa-2x  mr-2"></i>&nbsp;CART</a>
           </li>
           <li class="nav-item mx-1">
@@ -54,107 +54,101 @@
               <i class="fa fa-phone-square fa-fw fa-2x  mr-2"></i>&nbsp;CONTACT US</a>
           </li>
           <li class="nav-item mx-1">
-            <a class="nav-link = align-items-center d-flex" href="#">
-              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; HELLO, DUSTYTHECUTIE </a></li><a class="nav-link = align-items-center d-flex" href="#">
-          </a>
-        </ul><a class="nav-link = align-items-center d-flex" href="#">
-        </a>
-      </div><a class="nav-link = align-items-center d-flex" href="#">
-      </a>
-    </div><a class="nav-link = align-items-center d-flex" href="#">
-    </a>
-  </nav><a class="nav-link = align-items-center d-flex" href="#">
-  </a>
+            <a class="nav-link = align-items-center d-flex" href="signin.html">
+              <i class="fa fa-user-circle-o fa-fw fa-2x mr-2"></i> &nbsp; SIGN UP / LOG IN</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="content"><a class="nav-link = align-items-center d-flex" href="#">
     </a>
     <div class="row"><a class="nav-link = align-items-center d-flex" href="#">
       </a>
-      <div class="col-md-7"><a class="nav-link = align-items-center d-flex" href="#">
-        </a>
-        <div class="card profileCard"><a class="nav-link = align-items-center d-flex" href="#">
-            <div class="card-header">
-              <h5 class="title profileTitle">Edit Profile</h5>
-            </div>
-          </a>
-          <div class="card-body"><a class="nav-link = align-items-center d-flex" href="#">
-              <form>
-                <div class="row">
-                  <div class="col-md-8 pr-1">
-                    <div class="form-group">
-                      <label>Company (disabled)</label>
-                      <input type="text" class="form-control" placeholder="Company" value="Creative Code Inc." disabled="">
-                    </div>
+      <div class="col-md-6">
+        <div class="card profileCard">
+          <div class="card-header">
+            <h5 class="title profileTitle">Edit Profile</h5>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="row">
+                <div class="col-md-8 pr-1">
+                  <div class="form-group">
+                    <label>Company (disabled)</label>
+                    <input type="text" class="form-control" placeholder="Company" value="Creative Code Inc." disabled="">
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-4 pr-1">
-                    <div class="form-group">
-                      <label>Username</label>
-                      <input type="text" class="form-control" placeholder="Company" value="Mike">
-                    </div>
-                  </div>
-                  <div class="col-md-4 pl-1">
-                    <div class="form-group">
-                      <label>Email Address</label>
-                      <input type="text" class="form-control" placeholder="dustythecutie@gmail.com" value="dustythecutie@gmail.com">
-                    </div>
-                  </div>
-                  <div class="col-md-4 pl-1">
-                    <div class="form-group">
-                      <label>Phone Number</label>
-                      <input type="text" class="form-control" placeholder="123456789" value="123456789">
-                    </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 pr-1">
+                  <div class="form-group">
+                    <label>Username</label>
+                    <input type="text" class="form-control" placeholder="Company" value="Mike">
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label>Bank Transaction #</label>
-                      <input type="text" class="form-control" placeholder="Bank Transaction #" value="4505 5520 4879 5555">
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label>Industry</label>
-                      <input type="text" class="form-control" placeholder="Industry" value="Banking">
-                    </div>
+                <div class="col-md-4 pl-1">
+                  <div class="form-group">
+                    <label>Email Address</label>
+                    <input type="text" class="form-control" placeholder="dustythecutie@gmail.com" value="dustythecutie@gmail.com">
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="form-group">
-                      <label>Address</label>
-                      <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                    </div>
+                <div class="col-md-4 pl-1">
+                  <div class="form-group">
+                    <label>Phone Number</label>
+                    <input type="text" class="form-control" placeholder="123456789" value="123456789">
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-md-4 pr-1">
-                    <div class="form-group">
-                      <label>City</label>
-                      <input type="text" class="form-control" placeholder="City" value="Mike">
-                    </div>
-                  </div>
-                  <div class="col-md-4 px-1">
-                    <div class="form-group">
-                      <label>Country</label>
-                      <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                    </div>
-                  </div>
-                  <div class="col-md-4 pl-1">
-                    <div class="form-group">
-                      <label>Postal Code</label>
-                      <input type="number" class="form-control" placeholder="ZIP Code">
-                    </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label>Bank Transaction #</label>
+                    <input type="text" class="form-control" placeholder="Bank Transaction #" value="4505 5520 4879 5555">
                   </div>
                 </div>
-              </form>
-            </a><a class="btn btn-primary" href="#">Update Information</a>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label>Industry</label>
+                    <input type="text" class="form-control" placeholder="Industry" value="Banking">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 pr-1">
+                  <div class="form-group">
+                    <label>City</label>
+                    <input type="text" class="form-control" placeholder="City" value="Mike">
+                  </div>
+                </div>
+                <div class="col-md-4 px-1">
+                  <div class="form-group">
+                    <label>Country</label>
+                    <input type="text" class="form-control" placeholder="Country" value="Andrew">
+                  </div>
+                </div>
+                <div class="col-md-4 pl-1">
+                  <div class="form-group">
+                    <label>Postal Code</label>
+                    <input type="number" class="form-control" placeholder="ZIP Code">
+                  </div>
+                </div>
+              </div>
+            </form>
+            <a class="btn btn-primary" href="#">Update Information</a>
           </div>
         </div>
       </div>
       <div class="col-md-5">
-        <div class="card passwordCard">
+        <div class="card passwordCard" style="height:500px;">
           <div class="card-header">
             <h5 class="title profileTitle">Password Changing</h5>
           </div>
@@ -189,23 +183,48 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card cartCard">
-          <div class="card-header">
-            <h5 class="title profileTitle">Cart</h5>
+  </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-6 p-3">
+          <h5> <b>Main</b> </h5>
+          <ul class="list-unstyled">
+            <li> <a href="main.html">Home</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-6 p-3">
+          <h5> <b>Others</b> </h5>
+          <ul class="list-unstyled">
+            <li> <a href="faq.html">FAQ</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <h5> <b>About</b> </h5>
+          <p class="mb-0"> I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <h5> <b>Follow us</b> </h5>
+          <div class="row">
+            <div class="col-md-12 d-flex align-items-center justify-content-between my-2"> <a href="#">
+                <i class="d-block fa fa-facebook-official text-muted fa-lg mr-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-google-plus-official text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-pinterest-p text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-reddit text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
+              </a> </div>
           </div>
-          <div class="card-body">
-            <form>
-              <div class="row">
-                <div class="col-md-5 pr-1">
-                  <div class="form-group">
-                    <label>Items</label>
-                  </div>
-                </div>
-              </div>
-            </form><a class="btn btn-primary" href="#">Payment</a>
-          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p class="mb-0 mt-2">© 2014-2018 Pingendo. All rights reserved</p>
         </div>
       </div>
     </div>
