--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -72,10 +72,10 @@
         <div class="mx-auto col-md-12">
           <form class="form-inline d-flex justify-content-center">
             <div class="input-group">
-              <label style="margin-left: 5px;">From</label><input style="padding-top: 12px;"  type="text" class="form-control" placeholder="Location" id="form1">
-              <label>To</label><input style="padding-top: 12px;"  type="text" class="form-control" placeholder="Location" id="form1">
-              <label>Depature Date</label><input style="padding-top: 12px;"  type="date" class="form-control" placeholder="Location" id="form1">
-              <label>Return Date</label><input style="padding-top: 12px;"  type="date" class="form-control" placeholder="Location" id="form1">
+              <label style="margin-left: 5px;">From</label><input style="padding-top: 12px;" type="text" class="form-control" placeholder="Location" id="form1">
+              <label>To</label><input style="padding-top: 12px;" type="text" class="form-control" placeholder="Location" id="form1">
+              <label>Depature Date</label><input style="padding-top: 12px;" type="date" class="form-control" placeholder="Location" id="form1">
+              <label>Return Date</label><input style="padding-top: 12px;" type="date" class="form-control" placeholder="Location" id="form1">
               <div class="input-group-append"> <button class="btn btn-primary" type="button">Search Flight</button> </div>
             </div>
           </form>
@@ -247,6 +247,51 @@
           </div>
         </div>
       </main>
+    </div>
+  </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-6 p-3">
+          <h5> <b>Main</b> </h5>
+          <ul class="list-unstyled">
+            <li> <a href="main.html">Home</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-6 p-3">
+          <h5> <b>Others</b> </h5>
+          <ul class="list-unstyled">
+            <li> <a href="faq.html">FAQ</a> </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <h5> <b>About</b> </h5>
+          <p class="mb-0"> I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls.</p>
+        </div>
+        <div class="col-lg-3 col-md-6 p-3">
+          <h5> <b>Follow us</b> </h5>
+          <div class="row">
+            <div class="col-md-12 d-flex align-items-center justify-content-between my-2"> <a href="#">
+                <i class="d-block fa fa-facebook-official text-muted fa-lg mr-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-google-plus-official text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-pinterest-p text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-reddit text-muted fa-lg mx-2"></i>
+              </a> <a href="#">
+                <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
+              </a> </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p class="mb-0 mt-2">© 2014-2018 Pingendo. All rights reserved</p>
+        </div>
+      </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
