--- a/BTH745_Website/flight.html
+++ b/BTH745_Website/flight.html
@@ -216,7 +216,7 @@
               <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
             </div>
           </div>
-          <div class="row flightDiv">
+          <div class="row flightDiv" style="background-color:#F7F7FA;">
             <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/westjet.png" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
@@ -245,11 +245,127 @@
               <div class="addCart"><a class="btn btn-primary" href="ersonalization.html">Personalization</a> </div>
             </div>
           </div>
+          <div class="row flightDiv">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Air Canada - round-trip</h3>
+              </div>
+              <div>
+                <label>From: Toronto</label>
+              </div>
+              <div>
+                <label>To: Vancouver</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $650 </h3>
+              </div>
+              <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
+            </div>
+          </div>
+          <div class="row flightDiv" style="background-color:#F7F7FA;">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Air Canada - round-trip</h3>
+              </div>
+              <div>
+                <label>From: Toronto</label>
+              </div>
+              <div>
+                <label>To: Vancouver</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $650 </h3>
+              </div>
+              <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
+            </div>
+          </div>
+          <div class="row flightDiv">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Air Canada - round-trip</h3>
+              </div>
+              <div>
+                <label>From: Toronto</label>
+              </div>
+              <div>
+                <label>To: Vancouver</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $650 </h3>
+              </div>
+              <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
+            </div>
+          </div>
+          <div class="row flightDiv" style="background-color:#F7F7FA;">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/air_canada.png" width="250px" height="250px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Air Canada - round-trip</h3>
+              </div>
+              <div>
+                <label>From: Toronto</label>
+              </div>
+              <div>
+                <label>To: Vancouver</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Departure: July 21st, 2020 - 07:30PM</label>
+              </div>
+              <div>
+                <label>Date &amp; Time Return: August 21st, 2020 - 09:30PM</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $650 </h3>
+              </div>
+              <div class="addCart"><a class="btn btn-primary" href="personalization.html">Personalization</a> </div>
+            </div>
+          </div>
         </div>
       </main>
     </div>
   </div>
-  <div class="py-3">
+  <div class="py-3 footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
