--- a/BTH745_Website/australia_continent.html
+++ b/BTH745_Website/australia_continent.html
@@ -103,7 +103,7 @@
       </div>
     </div>
   </div>
-  <div class="py-3">
+  <div class="py-3 footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
