--- a/BTH745_Website/discover.html
+++ b/BTH745_Website/discover.html
@@ -125,7 +125,7 @@
       </div>
     </div>
   </a>
-  <div class="py-3">
+  <div class="py-3 footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
