--- a/BTH745_Website/hotel.html
+++ b/BTH745_Website/hotel.html
@@ -162,7 +162,7 @@
         </div>
         <h2>Hotel List</h2>
         <div class="container tripPlannerHotel" id="hotelList" style="">
-          <div class="row hotelDiv" style="padding-bottom: 50px">
+          <div class="row hotelDiv" style="padding-bottom: 30px; ">
             <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel1.jpg" width="250px" height="250px"></div>
             <div class="col-md-6">
               <div>
@@ -184,7 +184,95 @@
               </div>
             </div>
           </div>
-          <div class="row hotelDiv">
+          <div class="row hotelDiv" style="background-color:#F7F7FA; padding-bottom: 30px; ">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="450px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Albert Hotel</h3>
+              </div>
+              <div>
+                <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $200 / Day</h3>
+                <a href="#approveNoti">
+                  <button class="btn btn-primary" onclick="addTicket()">Add Ticket to Cart</button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row hotelDiv" style=" padding-bottom: 30px; ">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="450px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Albert Hotel</h3>
+              </div>
+              <div>
+                <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $200 / Day</h3>
+                <a href="#approveNoti">
+                  <button class="btn btn-primary" onclick="addTicket()">Add Ticket to Cart</button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row hotelDiv" style="background-color:#F7F7FA; padding-bottom: 30px; ">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="450px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Albert Hotel</h3>
+              </div>
+              <div>
+                <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $200 / Day</h3>
+                <a href="#approveNoti">
+                  <button class="btn btn-primary" onclick="addTicket()">Add Ticket to Cart</button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row hotelDiv" style=" padding-bottom: 30px; ">
+            <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="450px"></div>
+            <div class="col-md-6">
+              <div>
+                <h3> Albert Hotel</h3>
+              </div>
+              <div>
+                <label>Address: 1 School Avenue, Vancouver, BC, Canada</label>
+              </div>
+              <div>
+                <label><a href="#">Read Review</a></label>
+              </div>
+            </div>
+            <div class="col-md-4" style="text-align: right;">
+              <div>
+                <h3> Price: $200 / Day</h3>
+                <a href="#approveNoti">
+                  <button class="btn btn-primary" onclick="addTicket()">Add Ticket to Cart</button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="row hotelDiv" style="background-color:#F7F7FA; padding-bottom: 30px; ">
             <div class="col-md-2"><img class="img-fluid d-block" src="assets/img/hotel2.jpg" width="250px" height="450px"></div>
             <div class="col-md-6">
               <div>
@@ -210,7 +298,7 @@
       </main>
     </div>
   </div>
-  <div class="py-3">
+  <div class="py-3 footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
