--- a/BTH745_Website/personalization.html
+++ b/BTH745_Website/personalization.html
@@ -124,7 +124,7 @@
       </form>
     </div>
   </div>
-  <div class="py-3">
+  <div class="py-3 footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-3 col-6 p-3">
